# chat

./: Cargo.toml
src/: ctx.rs  error.rs  main.rs
src/model/: message.rs  user.rs
src/web/: mod.rs  mw_auth.rs  routes_message.rs  routes_user.rs
