[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
dotenv = "0.15.0"
futures = "0.3.28"
lazy-regex = "2.5.0"
mongodb = "2.5.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
strum_macros = "0.24.3"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
